a bit less of repeating moves